--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div id="example5"></div>
     <h2>Query 6: Last 3 Twitter posts using hastag #API with custom date formatter</h2>
     <div id="example6"></div>
+    <h2>Query 7: Last 5 Twitter posts by @clarabellum, with retweets displaying in green.</h2>
+    <div id="example7"></div>
 
     <!-- moment.js only needed for Query 6 example -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
